@@ -1,0 +1,1 @@
+<ERROR CODE="7" DESCRIPTION="The requested operation is not supported"/>
