@@ -1,0 +1,27 @@
+<!-- from 2793653 -->
+<?xml version="1.0" encoding="utf-8"?>
+<CIM CIMVERSION="2.0" DTDVERSION="2.0">
+<MESSAGE ID="4135" PROTOCOLVERSION="1.0">
+<SIMPLEREQ>
+<IMETHODCALL NAME="CreateInstance">
+<LOCALNAMESPACEPATH>
+<NAMESPACE NAME="root"/>
+<NAMESPACE NAME="interop"/>
+</LOCALNAMESPACEPATH>
+<IPARAMVALUE NAME="NewInstance">
+<INSTANCE CLASSNAME="CIM_ManagedElement">
+<PROPERTY NAME="Caption" TYPE="string">
+<VALUE/>
+</PROPERTY>
+<PROPERTY NAME="Description" TYPE="string">
+<VALUE/>
+</PROPERTY>
+<PROPERTY NAME="ElementName" TYPE="string">
+<VALUE/>
+</PROPERTY>
+</INSTANCE>
+</IPARAMVALUE>
+</IMETHODCALL>
+</SIMPLEREQ>
+</MESSAGE>
+</CIM>
