@@ -3,6 +3,10 @@
 	* result.c:
 	[ 2818014 ] EnumerateClasses segfault w/DeepInheritance prop setting
 
+	* internalProvider.c:
+	[ 2793653 ] CreateInstance method of abstract class
+	(patch by Shigeyoshi Hashi)
+	
 2009-09-22  Sean Swehla <smswehla@linux.vnet.ibm.com>
 
 	* interopServerProvider.c:
